link overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,500,600');
 
+a {
+	text-overflow: ellipsis;
+	overflow: hidden;
+	display: inline-block;
+	width: 100%;
+}
 
 #sections {
   padding-right: 10vw;	
